設定はもうすぐ終わり

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@
 .flex_1{
     flex: 1 330px
 }
+.flex_2{
+    flex: 1 50px
+}
 
 .mdl-radio{
     width: 100%
@@ -30,5 +33,5 @@
     font-size: 16px;
     text-align: center;
     border-bottom: 1px solid rgba(0,0,0,.12);
-    transition: border-bottom 0.1s linear 0.1s;
+    transition: border-bottom 0.1s linear 0.01s;
 }
